update image to be chester

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <a href="https://linktr.ee/jimmyorr">
-        <img src="./cats-on-a-goat.png" alt="cats on a goat" />
+        <img src="./chester.jpg" alt="chester" />
     </a>
 </body>
 
