Replace jpg with png with transparent background

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <a href="https://linktr.ee/jimmyorr">
-        <img src="./chester.jpg" alt="chester" />
+        <img src="./chester.png" alt="chester" />
     </a>
 </body>
 
