Add rel attribute for external links.

--- a/mcu.html
+++ b/mcu.html
@@ -103,7 +103,7 @@
                     <td>${movie.budget !== null ? movie.budget : "N/A"}</td>
                     <td>${movie.boxOffice !== null ? movie.boxOffice : "N/A"}</td>
                     <td>
-                        <a href="https://www.imdb.com/title/${movie.imdbId}" target="_blank">
+                        <a href="https://www.imdb.com/title/${movie.imdbId}" target="_blank" rel="noopener noreferrer">
                             ${movie.imdbScore !== null ? movie.imdbScore.toFixed(1) : "N/A"}
                         </a>
                     </td>
