--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang=en>
+<html lang="en">
 
 <head>
-    <meta charset=utf-8>
+    <meta charset="utf-8">
     <title>cowneck</title>
     <style>
         body {
