fix(mcu): standardize column header capitalization in MCU table to use sentence case

--- a/mcu.html
+++ b/mcu.html
@@ -46,10 +46,10 @@
             <tr>
                 <th>Watched</th>
                 <th onclick="sortTable(1)" class="sortable">Movie</th>
-                <th onclick="sortTable(2)" class="sortable">Release Date</th>
+                <th onclick="sortTable(2)" class="sortable">Release date</th>
                 <th onclick="sortTable(3)" class="sortable">Phase</th>
                 <th onclick="sortTable(4)" class="sortable">Budget (M$)</th>
-                <th onclick="sortTable(5)" class="sortable">Box Office (M$)</th>
+                <th onclick="sortTable(5)" class="sortable">Box office (M$)</th>
                 <th onclick="sortTable(6)" class="sortable">IMDb</th>
             </tr>
         </thead>
