--- a/games/index.html
+++ b/games/index.html
@@ -69,6 +69,12 @@
                 <p>Test your arithmetic skills with quick challenges.</p>
                 <a href="mathfacts.html" class="btn">Play now</a>
             </div>
+
+            <div class="game-card">
+                <h2>Neon Drifter</h2>
+                <p>A retro text-based adventure with a cyberpunk aesthetic.</p>
+                <a href="neondrifter.html" class="btn">Play now</a>
+            </div>
         </div>
     </main>
 </body>
