--- a/games/index.html
+++ b/games/index.html
@@ -75,6 +75,12 @@
                 <p>A retro text-based adventure with a cyberpunk aesthetic.</p>
                 <a href="neondrifter.html" class="btn">Play now</a>
             </div>
+
+            <div class="game-card">
+                <h2>Cyberpup 2067</h2>
+                <p>A pixel-art platformer where you pilot a Corgi Mech.</p>
+                <a href="cyberpup2067.html" class="btn">Play now</a>
+            </div>
         </div>
     </main>
 </body>
