--- a/games/index.html
+++ b/games/index.html
@@ -67,19 +67,31 @@
             <div class="game-card">
                 <h2>Math Facts</h2>
                 <p>Test your arithmetic skills with quick challenges.</p>
-                <a href="mathfacts.html" class="btn">Play now</a>
+                <a href="math-facts.html" class="btn">Play now</a>
             </div>
 
             <div class="game-card">
                 <h2>Neon Drifter</h2>
                 <p>A retro text-based adventure with a cyberpunk aesthetic.</p>
-                <a href="neondrifter.html" class="btn">Play now</a>
+                <a href="neon-drifter.html" class="btn">Play now</a>
             </div>
 
             <div class="game-card">
                 <h2>Cyberpup 2067</h2>
                 <p>A pixel-art platformer where you pilot a Corgi Mech.</p>
-                <a href="cyberpup2067.html" class="btn">Play now</a>
+                <a href="cyberpup-2067.html" class="btn">Play now</a>
+            </div>
+
+            <div class="game-card">
+                <h2>Cyberpup Returns</h2>
+                <p>The sequel. Faster. Tastier. Spookier. Battle ghost puppies and chocolate rockets across three action-packed levels with powerups and strategic platforming.</p>
+                <a href="cyberpup-returns.html" class="btn">Play now</a>
+            </div>
+
+            <div class="game-card">
+                <h2>Meow Royale</h2>
+                <p>Battle of the Kittens. Play solo Battle Royale against 12 AI bots or challenge a friend in split-screen 1v1. 3D action with dynamic storm mechanics and strategic combat.</p>
+                <a href="meow-royale.html" class="btn">Play now</a>
             </div>
         </div>
     </main>
