Correct capitalization in back link text for consistency

--- a/games/index.html
+++ b/games/index.html
@@ -173,7 +173,7 @@
 
         </div>
 
-        <a href="/" class="back-link">← Return to Cowneck.com</a>
+        <a href="/" class="back-link">← Return to cowneck.com</a>
     </main>
 </body>
 </html>
