Nerf boss stats for improved game balance

--- a/games/neon-drifter.html
+++ b/games/neon-drifter.html
@@ -246,7 +246,8 @@
         turret: { name: "Auto-Turret", hp: 80, maxHp: 80, dmg: 15, xp: 30, desc: "Stationary defense unit." },
         // NERFED: elite stats lowered
         elite: { name: "Corp Exec", hp: 80, maxHp: 80, dmg: 10, xp: 50, desc: "Armored suit." },
-        boss: { name: "The Mainframe", hp: 300, maxHp: 300, dmg: 25, xp: 500, desc: "Massive AI Server." }
+        // NERFED: boss stats lowered (was 300 hp / 25 dmg)
+        boss: { name: "The Mainframe", hp: 200, maxHp: 200, dmg: 15, xp: 500, desc: "Massive AI Server." }
     };
 
     const missions = [
