--- a/games/index.html
+++ b/games/index.html
@@ -171,6 +171,12 @@
                 <a href="meow-royale.html" class="btn">PLAY NOW</a>
             </div>
 
+            <div class="game-card">
+                <h2>🐾 Goofy Paws</h2>
+                <p>The owners are angry. Survive the household chaos, dodge enemies, collect weapons, and battle infamous bosses like The Exterminator, Vacuum King, and The Vet.</p>
+                <a href="goofy-paws.html" class="btn">PLAY NOW</a>
+            </div>
+
         </div>
 
         <a href="/" class="back-link">← Return to cowneck.com</a>
