--- a/games/index.html
+++ b/games/index.html
@@ -196,6 +196,12 @@
                 <a href="donut-chef.html" class="btn">PLAY NOW</a>
             </div>
 
+            <div class="game-card">
+                <h2>⛷️ Slope Builder</h2>
+                <p>Create your own ski course in BUILD mode, then RIDE it! Use arrows or gyro controls to shape the slopes and boost uphill for thrilling descents.</p>
+                <a href="slope-builder.html" class="btn">PLAY NOW</a>
+            </div>
+
         </div>
 
         <a href="/" class="back-link">← Return to cowneck.com</a>
