style: adjust padding for cost coin clearance in donut-chef.html

--- a/games/donut-chef.html
+++ b/games/donut-chef.html
@@ -260,6 +260,9 @@
             text-align: center;
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
             padding-bottom: 3px;
+            padding-left: 15px;
+            /* CLEARANCE FOR COST COIN */
+            padding-right: 2px;
             line-height: 1.1;
         }
 
